fix(k8s): regenerate secrets with valid base64 encoding